<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Track My Shoes</string>
    <string name="title_activity_login">Login</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="sign_out">Sign out</string>
    <string name="default_web_client_id" translatable="false">64:79:0F:35:DC:41:CB:39:78:87:25:EE:AE:68:E4:B7:3B:B5:7F:A1</string>
    <string name="maps_api_key" translatable="false">AIzaSyDruOwI4lvDTvZY8DJdaQAYZbGK7jkby0s</string>
    <string name="text_current_location">Current location:</string>
    <string name="text_overview_of_the_week">Overview of the week:</string>
    <string name="text_check_out_leaderboard">Check out who is at the top!</string>
    <string name="text_category">Category:</string>
    <string name="text_gold_medal">Gold Medal</string>
    <string name="text_silver_medal">Silver Medal</string>
    <string name="text_bronce_medal">Bronce Medal</string>
    <string name="text_login">Please login with your Google account to continue</string>
    <string name="text_welcome">Welcome to</string>
    <string name="text_recent_runs">Recent runs:</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="text_today">Today:</string>
    <string name="text_current_temperature">Current Tempertature:</string>
    <string name="text_feels_like">Feels Like:</string>
    <string name="text_wind">Wind:</string>

    <!-- Thunderstorm -->
    <string name="thunderstorm_light_rain">thunderstorm with light rain</string>
    <string name="thunderstorm_rain">thunderstorm with rain</string>
    <string name="thunderstorm_heavy_rain">thunderstorm with heavy rain</string>
    <string name="light_thunderstorm">light thunderstorm</string>
    <string name="thunderstorm">thunderstorm</string>
    <string name="heavy_thunderstorm">heavy thunderstorm</string>
    <string name="ragged_thunderstorm">ragged thunderstorm</string>
    <string name="thunderstorm_light_drizzle">thunderstorm with light drizzle</string>
    <string name="thunderstorm_drizzle">thunderstorm with drizzle</string>
    <string name="thunderstorm_heavy_drizzle">thunderstorm with heavy drizzle</string>

    <!-- Drizzle -->
    <string name="drizzle_light_intensity">light intensity drizzle</string>
    <string name="drizzle">drizzle</string>
    <string name="drizzle_heavy_intensity">heavy intensity drizzle</string>
    <string name="drizzle_light_intensity_rain">light intensity drizzle rain</string>
    <string name="drizzle_rain">drizzle rain</string>
    <string name="drizzle_heavy_intensity_rain">heavy intensity drizzle rain</string>
    <string name="shower_rain_and_drizzle">shower rain and drizzle</string>
    <string name="heavy_shower_rain_and_drizzle">heavy shower rain and drizzle</string>
    <string name="shower_drizzle">shower drizzle</string>

    <!-- Rain -->
    <string name="rain_light">light rain</string>
    <string name="rain_moderate">moderate rain</string>
    <string name="rain_heavy_intensity">heavy intensity rain</string>
    <string name="rain_very_heavy">very heavy rain</string>
    <string name="rain_extreme">extreme rain</string>
    <string name="freezing_rain">freezing rain</string>
    <string name="shower_rain_light_intensity">light intensity shower rain</string>
    <string name="shower_rain">shower rain</string>
    <string name="shower_rain_heavy_intensity">heavy intensity shower rain</string>
    <string name="ragged_shower_rain">ragged shower rain</string>

    <!-- Snow -->
    <string name="snow_light">light snow</string>
    <string name="snow">snow</string>
    <string name="snow_heavy">heavy snow</string>
    <string name="sleet">sleet</string>
    <string name="shower_sleet_light">light shower sleet</string>
    <string name="shower_sleet">shower sleet</string>
    <string name="rain_and_snow_light">light rain and snow</string>
    <string name="rain_and_snow">rain and snow</string>
    <string name="shower_snow_light">light shower snow</string>
    <string name="shower_snow">shower snow</string>
    <string name="shower_snow_heavy">heavy shower snow</string>

    <!-- Atmosphere -->
    <string name="mist">mist</string>
    <string name="smoke">smoke</string>
    <string name="haze">haze</string>
    <string name="sand_dust_whirls">sand/dust whirls</string>
    <string name="fog">fog</string>
    <string name="sand">sand</string>
    <string name="dust">dust</string>
    <string name="volcanic_ash">volcanic ash</string>
    <string name="squalls">squalls</string>
    <string name="tornado">tornado</string>

    <!-- Clear -->
    <string name="clear_sky">clear sky</string>

    <!-- Clouds -->
    <string name="few_clouds">few clouds</string>
    <string name="scattered_clouds">scattered clouds</string>
    <string name="broken_clouds">broken clouds</string>
    <string name="overcast_clouds">overcast clouds</string>

    <string name="text_weather">Weather:</string>
    <string name="text_distance_run">Distance run:</string>
    <string name="text_avg_speed">Average speed:</string>
    <string name="text_duration">Duration:</string>
    <string name="text_start">Start</string>
    <string name="text_stop">Stop</string>
    <string name="text_save">Save</string>
    <string name="dialog_gps">GPS is required to track your journey!</string>
    <string name="text_enable_gps">Enable GPS</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_pause">Pause</string>
    <string name="run_serialize_string" translatable="false">run</string>
    <string name="text_by">By:</string>
    <string name="text_andres">Andres Navarro</string>
    <string name="text_alejo">Alejo Gonzalez</string>
    <string name="text_daniel">Daniel Toribio</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="text_runs">Runs</string>
    <string name="text_click_info">Click for more info</string>
    <string name="text_run_finish">Your Journey has been saved. You ran a total of </string>
    <string name="text_km">km</string>

    <string name="dialog_weather">GPS is required to check the weather in your current location!</string>
</resources>
